# youtube-scraping-selenium

./: LICENSE  README.md  main.py  pyproject.toml  scrapy.py  trending.html
