[tool.poetry]
name = "repl_nix_youtube-scraping-selenium"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.28.1"
selenium = "^4.6.1"
python-dotenv = "^0.21.0"
schedule = "^1.1.0"
webdriver-manager = "^3.8.5"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
